# udlaeg

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: b2f1a7c4d9e0_person_share_token.py  c0f59ada09b1_initial_schema.py
app/: cli.py  config.py  db.py  logging_config.py  main.py  templating.py  users.py
app/models/: __init__.py  expense.py  payment.py  person.py  receipt.py  user.py
app/routers/: auth.py  dashboard.py  expenses.py  payments.py  persons.py  public.py  receipts.py
app/schemas/: expense.py  user.py
app/services/: balance.py  files.py
app/static/: style.css
app/templates/: base.html  dashboard.html  login.html
app/templates/expenses/: detail.html  form.html  list.html
app/templates/partials/: expense_rows.html  payment_panel.html  person_edit_row.html  person_rows.html  receipt_grid.html
app/templates/persons/: list.html
app/templates/public/: expense.html  invalid.html  status.html
scripts/: backup.sh
tests/: conftest.py  test_balance.py  test_expenses_flow.py  test_public_receipts.py  test_sharing.py
