[project]
name = "udlaeg"
version = "0.1.0"
description = "Self-hosted tracker for expenses laid out on behalf of other people"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "fastapi-users[sqlalchemy]>=14.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "filetype>=1.2",
    "aiofiles>=24.1",
    "python-json-logger>=3.2",
    "prometheus-fastapi-instrumentator>=7.0",
    "pydantic-settings>=2.6",
    "babel>=2.16",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008: FastAPI's Depends()/Form() default-argument pattern is idiomatic.
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
